# task_management

./: .env.example  README.md  app.js  package-lock.json  package.json
server/: .env
server/config/: index.js  server.js
server/controller/: index_controller.js  job_cancel_controller.js  job_create_controller.js  job_query_controller.js  job_remove_controller.js  job_update_controller.js  location_create_controller.js  location_query_controller.js  location_update_controller.js  robot_create_controller.js  robot_goal_pose_controller.js  robot_query_controller.js  robot_remove_controller.js  robot_update_controller.js  waiting_point_create_controller.js  waiting_point_query_controller.js  waiting_point_remove_controller.js  waiting_point_update_controller.js
server/management/: check_connected_robots.js  fleet_management.js  start_management.js
server/messages/: JobCancel.json  JobCreate.json  JobRemove.json  JobUpdate.json  LocationCreate.json  LocationQuery.json  LocationUpdate.json  RobotCreate.json  RobotQuery.json  RobotRemove.json  RobotUpdate.json  WaitingPointCreate.json  WaitingPointRemove.json  (+1 more)
server/ros/ros_msgs/definitions/robot_backend_interface_msgs/: CMakeLists.txt  package.xml
server/ros/ros_msgs/definitions/robot_backend_interface_msgs/msg/: Job.msg  JobToBackend.msg  Location.msg  Robot.msg  Task.msg
server/ros/ros_msgs/definitions/robot_backend_interface_msgs/srv/: JobToBackend.srv  JobToRobot.srv  LocationToRobot.srv  RobotCurrentActivityToBackend.srv  RobotToBackend.srv  UpdateRobotStatus.srv  WaitingPointsToRobot.srv
(+82 files in other folders)
